overflow fixes

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -62,6 +62,7 @@
     width: 440px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   @media (min-width: @desktop-width) {
