--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -8,7 +8,7 @@
   position: relative;
 
   @media (min-width: @desktop-width) {
-    height: 694px;
+    min-height: 694px;
   }
 
   &::before {
