--- a/source/less/blocks/plans.less
+++ b/source/less/blocks/plans.less
@@ -97,6 +97,7 @@
   margin: 0;
   margin-bottom: 30px;
   margin-left: 68px;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
