--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -40,6 +40,7 @@
   @media (min-width: @desktop-width) {
     padding-left: 30px;
     margin-left: 0;
+    width: 415px;
   }
 }
 
@@ -48,6 +49,7 @@
   width: 250px;
   text-align: center;
   margin: 25px 0;
+  word-break: break-word;
 
   @media (min-width: @tablet-width) {
     color: @basic-black;
